Feat [Paso 1]: <Fallo de test>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,8 @@
         "titleBar.activeBackground": "#0b96af",
         "titleBar.activeForeground": "#e7e7e7",
         "titleBar.inactiveBackground": "#0b96af99",
-        "titleBar.inactiveForeground": "#e7e7e799"
+        "titleBar.inactiveForeground": "#e7e7e799",
+        "commandCenter.border": "#e7e7e799"
     },
     "peacock.color": "#0b96af"
 }
